fix(finance,bed): 手测发现的 5 处缺陷——通用券 NPE、路由冲突与 403、审计动作未汉化
联调实测（真实登录 + 真实数据）暴露出单测没覆盖到的问题：

1) 发放「通用券」直接 500
   issue() 里用 List.of((Long) null) 占位，而 List.of 不接受 null 元素直接抛 NPE。
   原单测只用 mapper 直插券，从未走过 issue 发放路径，因此没暴露。
   改用 Collections.singletonList，并补两个回归用例：通用券发放、按选中长者批量发券。

2) 消费券查询遇到通用券再次 NPE
   listUsable/page 组装视图时 elderNames.get(null)，而 loadElderNames 空集返回
   Map.of()——Map.of().get(null) 抛 NPE。这与此前在提醒/押金服务修过的是同一类坑，
   当时漏了消费券服务。统一改为可变 HashMap 并加空值短路。
   影响面：只要机构里存在通用券，消费券管理页与收款弹窗的可用券查询就会 500。

3) 押金管理页进不去
   routes.ts 里本就有一条同名同路径的遗留兼容路由，redirect 到旧的老人账户页，
   把新页面完全遮住。删除该兼容项——该路径现在有了名副其实的真实页面。

4) 房间详情页 403
   页面权限按路径前缀授权，我把它放在顶层 /bed/room-detail，不在任何已授权前缀下，
   连系统管理员都被拦。移到 /logistics/assets/room-detail，与平面图同组，
   平面图的跳转目标同步更新。

5) 首页最近操作记录露出原始 action code
   ELDER_FILE_ARCHIVE_ADD/DELETE 没有中文映射，另补 CREATE/UPDATE/DELETE/EXPORT
   通用动作的兜底汉化。

实测覆盖：电价与抄表核算（250 度 × 0.68 = 170.00）、读数回退与已缴锁定拒绝、
按人数均摊、押金标准按护理等级解析（自理 2000 而非通用 3000）、扣款/退还超额与
无原因拒绝、押金流水与汇总、券发放/过期自动置态/可用券过滤、
收款抵扣结算（1000 = 长护险 400 + 折扣 100 + 券 150 + 现金 350，券扣至 0 置已用完）、
四种拒绝分支、提醒生成幂等与逐条/一键处理、平面图朝向分组与四色优先级、
房间详情三 Tab 与电子文件存档增删与分类校验、首页四卡、4 张 xlsx 报表均返回真 zip。

回归：用例 273（+2 回归用例），失败 36，失败集合与前八批完全一致，无新增失败。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>